# ping2pong_jules

./: .gitignore  .hc  Cargo.toml  package-lock.json  package.json
dnas/ping_2_pong/workdir/: dna.yaml  ping_2_pong.dna
dnas/ping_2_pong/zomes/coordinator/ping_2_pong/: Cargo.toml
dnas/ping_2_pong/zomes/coordinator/ping_2_pong/src/: chat.rs  game.rs  invitations.rs  lib.rs  player.rs  score.rs  signals.rs  statistics.rs  utils.rs
dnas/ping_2_pong/zomes/coordinator/ping_2_pong/tests/src/: common.rs  mod.rs  score.rs  statistics.rs
dnas/ping_2_pong/zomes/integrity/ping_2_pong/: Cargo.toml
dnas/ping_2_pong/zomes/integrity/ping_2_pong/src/: anchor_path.rs  game.rs  game_stats.rs  game_stats_validation.rs  game_validation.rs  lib.rs  player.rs  player_validation.rs  presence.rs  presence_validation.rs  score.rs  score_validation.rs  statistics.rs  statistics_validation.rs  utils.rs
ui/: .gitignore
ui/src/: App.svelte  contexts.ts  holochainConfig.ts  index.css  svelte.d.ts  utils.ts
ui/src/ping_2_pong/: WelcomePopup.svelte
ui/src/ping_2_pong/chat/: GlobalChat.svelte
ui/src/ping_2_pong/game/: CreateGame.svelte  Dashboard.svelte  GlobalScoreboard.svelte  InvitationPopup.svelte  Leaderboard.svelte  Lobby.svelte  OpponentLeftPopup.svelte  PlayButton.svelte  PongGame.svelte  StatisticsDashboard.svelte
ui/src/ping_2_pong/ping_2_pong/: types.ts
ui/src/stores/: chatStore.ts  currentGame.ts  gameStatsStore.ts  invitationStore.ts  playerProfile.ts  profilesStore.ts  routeStore.ts
workdir/: happ.yaml  ping2pong.happ  web-happ.yaml
