[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.5.1"
hdk = "=0.4.1"
serde = "1.0"


[workspace.dependencies.ping_2_pong]
path = "dnas/ping_2_pong/zomes/coordinator/ping_2_pong"

[workspace.dependencies.ping_2_pong_integrity]
path = "dnas/ping_2_pong/zomes/integrity/ping_2_pong"
